--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@tabler/icons-react": "^2.4.0",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
