--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.5",
     "@mantine/core": "^5.10.3",
     "@mantine/dates": "^5.10.3",
+    "@mantine/form": "^6.0.0",
     "@mantine/hooks": "^5.10.3",
     "@mantine/modals": "^5.10.3",
     "@mantine/notifications": "^5.10.3",
