--- a/aleo-client/package.json
+++ b/aleo-client/package.json
@@ -18,10 +18,17 @@
     "@mantine/hooks": "^5.10.3",
     "@mantine/modals": "^5.10.3",
     "@mantine/notifications": "^5.10.3",
+    "@reduxjs/toolkit": "^1.9.3",
     "@tabler/icons-react": "^2.8.0",
+    "axios": "^1.3.4",
     "dayjs": "^1.11.7",
+    "mobx": "^6.8.0",
+    "mobx-react-lite": "^3.4.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.9.0",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
