--- a/aleo-client/package.json
+++ b/aleo-client/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@tabler/icons-react": "^2.8.0",
     "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
